# Solitaire

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Menu/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp
src/dataStructs/: CLinkedList.hpp
src/sdl/: LAudio.hpp  LTexture.cpp  LTexture.hpp  LWindow.cpp  LWindow.hpp
src/solitaire/: Card.cpp  Card.hpp  CardCreator.cpp  CardCreator.hpp  Solitaire.cpp  Solitaire.hpp  StackTypes.hpp  render.cpp
